--- a/index.html
+++ b/index.html
@@ -1265,7 +1265,7 @@
                 <div class="grid grid-cols-1 lg:grid-cols-3 items-center gap-8">
                     <!-- Left: Image - taking 1/3 of the space -->
                     <div class="flex justify-center lg:justify-start order-2 lg:order-1 scroll-fade-in-left">
-                        <img src="https://images.unsplash.com/photo-1584467735871-8db9ac8cc1b8?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80" 
+                        <img src="Recovery-Programs.jpg" 
                              alt="Post-treatment recovery services" 
                              class="section-image">
                     </div>
